stylesheets/shared-package/default.css
/* Clearfix */
.clearfix:before,
.clearfix:after {
    content: "";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}
/* End Clearfix */

/* Borrowed from those smart guys @ Fog Creek. Props to Justin & Bobby */
.fancy-scrollbar::-webkit-scrollbar {
    height: 8px;
    width: 8px;
}
.fancy-scrollbar::-webkit-scrollbar-button:start:decrement,
.fancy-scrollbar::-webkit-scrollbar-button:end:increment {
    background: transparent;
    display: none;
}
.fancy-scrollbar::-webkit-scrollbar-track-piece {
    background: transparent;
}
.fancy-scrollbar::-webkit-scrollbar-track-piece:vertical:start {
    -webkit-border-top-left-radius: 4px;
    -webkit-border-top-right-radius: 4px;
}
.fancy-scrollbar::-webkit-scrollbar-track-piece:vertical:end {
    -webkit-border-bottom-left-radius: 4px;
    -webkit-border-bottom-right-radius: 4px;
}
.fancy-scrollbar::-webkit-scrollbar-track-piece:horizontal:start {
    -webkit-border-top-left-radius: 4px;
    -webkit-border-bottom-left-radius: 4px;
}
.fancy-scrollbar::-webkit-scrollbar-track-piece:horizontal:end {
    -webkit-border-top-right-radius: 4px;
    -webkit-border-bottom-right-radius: 4px;
}
.fancy-scrollbar::-webkit-scrollbar-thumb:vertical,
.fancy-scrollbar::-webkit-scrollbar-thumb:horizontal {
    background: #ccc;
    border: 1px solid #aaa;
    -webkit-border-radius: 4px;
    display: block;
    height: 50px;
}

html, body {
    height: 100%;
}

html {
    overflow-y: scroll;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin: 0;
    color: #444;
    background: #f5f5f5;
    line-height: 22px;
}

#outer-wrapper {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 0 -77px;
}

#page-container {
    background-position: 0 85px;
    max-width: 1200px;
    position: relative;
    margin: 0 auto;
}

div#content {
    background: #fff;
}

article {
    padding: 0 19px;
    background: #fff;
    position: relative;
    margin: 0 1px;
    border: 1px solid rgb(231, 231, 231);
}

/* Basic typography for the entire site */

h1, h2, h3, h4, h5 {
    color: #111;
    font-family: "MuseoSans500", sans-serif;
}

h1 {
    font-size: 1.5em;
    margin-bottom: 22px;
   
}

.main-headline, .section-headline {
    padding-top: 80px;
}

.main-headline a, .section-headline a {
    text-decoration: none;
}

.main-headline a:hover, .section-headline a:hover {
    text-decoration: underline;
}

.main-headline a:visited, .section-headline a:visited {
    color: #007EA8;
}

h1.main-headline {
    font-size: 2em;
    position: relative;
    line-height: 37px;
    z-index: 10;
}

h2 {
    font-size: 1.25em;
    margin-bottom: 22px;
}

h3 {
    font-size: 1.125em;
    margin-bottom: 22px;
}

h4 {
    font-size: 0.938em;
    margin-bottom: 22px;
}

h5 {
    font-size: 0.938em;
    margin-bottom: -22px;
}

p {
    font-size: 0.875em;
    margin: 22px 0;
}

.pulls {
    margin-bottom: 9px;
}

/* "Pulls" the next block element up by halving the margin. */
.pulled {
    margin-top: 9px;
    margin-bottom: 27px;
}

/* Preserves vertical rhythm. Not always necessary */

b, strong {
    font-weight: bold;
}

em {
    font-style: italic;
}

.tiny {
    font-size: 0.625em;
}

.right {
    text-align: right;
}

.left {
    text-align: left;
}

.center {
    text-align: center;
}

.justify {
    text-align: justify;
}

a.simple-link {
    text-decoration: none;
}

a.simple-link:hover {
    text-decoration: underline;
}

.ampersand {
    font-family: Tahoma, sans-serif;
}

h2 .ampersand {
    font-size: 1.18em;
}

/*  ellipses:
    You *must* set a width and display: (inline-)block
    otherwise.... this will 100% not work.
*/
.ellipsis {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

/* End of basic typography */

hr {
    background: #CCC;
    border: none;
    -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.075);
    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.075);
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.075);
    clear: both;
    color: #CCC;
    display: block;
    height: 1px;
    margin: 18px 0 36px 0;
    padding: 0;
    width: 100%;
}

hr.thin {
    width: 50%;
    margin-bottom: 18px;
    margin-left: auto;
    margin-right: auto;
    opacity: 0.40;
    filter: alpha(opacity = 40);
    width: 50%;
}

.mobile-only {
    display: none;
}

/* Links in the header and footer don't change color when visited. */
a:link,
a:visited,
header a:visited,
footer a:visited,
.visited-no-recolor a:visited,
a.visited-no-recolor:visited {
    color:rgb(0, 9, 112);
    text-decoration: none;
    font-size: 14px;
}

a:visited {
    color: #26008F;
}

a:link:hover, a:link:focus, a:visited:hover, a:visited:focus {
    /* TODO why was this color defined here?color: #26008F;*/
    text-decoration: underline;
    color:BABABA;
}

/*
 * Hide links with href=# and other script-requiring elements from non-scripting users,
 * since they will only be confusing.  They will be made visible by script.
 */
.requires_script {
    visibility: hidden;
}

img {
    -ms-interpolation-mode: bicubic;
    /* Fix IE image scaling so that it isn't crappy */
}

input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
}

#footer {
    display: block;
    width: 100%;
    font-size: 0.75em;
    font-family: "MuseoSans300", sans-serif;
}

#footer {
    height: 208px;
    clear: both;
    position: relative;
}

#footer.short .inner {
    margin: 10px auto 15px;
    font-size: 1em;
}

#footer #leaves {
    text-align: center;
    background-image: none;
}

#footer.short, .push {
    height: 38px;
}

#footer.short {
    color: #555;
    z-index: 10;
}

#footer #leaves {
    /* background-image: url(/images/non-repeating-sprites.4.png);
    background-position: 319px -908px;*/
    height: 188px;
}

#footer.short #leaves {
    height: 38px;
}

#footer ul.page_links {
    float: left;
    padding: 0 20px;
    margin: 0;
}
/* ... */

